"Ref Restdocs로 컨트롤러 테스트 코드 작성"
- Swagger 에서 Swagger + Restdocs로 변경됨에 따라 컨트롤러 테스트 코드 수정